--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -951,6 +951,309 @@
     "df['Item_Fat_Content'] = df['Item_Fat_Content'].replace({'LF':'Low Fat', 'reg':'Regular', 'low fat':'Low Fat'})\n",
     "df['Item_Fat_Content'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa0475bd",
+   "metadata": {},
+   "source": [
+    "## Creation of New Attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37c9bf1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       FD\n",
+       "1       DR\n",
+       "2       FD\n",
+       "3       FD\n",
+       "4       NC\n",
+       "        ..\n",
+       "8518    FD\n",
+       "8519    FD\n",
+       "8520    NC\n",
+       "8521    FD\n",
+       "8522    DR\n",
+       "Name: New_Item_Type, Length: 8523, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df['New_Item_Type'] = df['Item_Identifier'].apply(lambda x: x[:2])\n",
+    "df['New_Item_Type']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc731f7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "New_Item_Type\n",
+       "Food              6125\n",
+       "Non-Consumable    1599\n",
+       "Drinks             799\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df['New_Item_Type'] = df['New_Item_Type'].map({'FD':'Food', 'NC':'Non-Consumable', 'DR':'Drinks'})\n",
+    "df['New_Item_Type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ef1752d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Item_Fat_Content\n",
+       "Low Fat       3918\n",
+       "Regular       3006\n",
+       "Non-Edible    1599\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df.loc[df['New_Item_Type']=='Non-Consumable', 'Item_Fat_Content'] = 'Non-Edible'\n",
+    "df['Item_Fat_Content'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8160faf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create small values for establishment year\n",
+    "df['Outlet_Years'] = 2013 - df['Outlet_Establishment_Year']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "021be11f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       14\n",
+       "1        4\n",
+       "2       14\n",
+       "3       15\n",
+       "4       26\n",
+       "        ..\n",
+       "8518    26\n",
+       "8519    11\n",
+       "8520     9\n",
+       "8521     4\n",
+       "8522    16\n",
+       "Name: Outlet_Years, Length: 8523, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df['Outlet_Years']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78fed96d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Item_Identifier</th>\n",
+       "      <th>Item_Weight</th>\n",
+       "      <th>Item_Fat_Content</th>\n",
+       "      <th>Item_Visibility</th>\n",
+       "      <th>Item_Type</th>\n",
+       "      <th>Item_MRP</th>\n",
+       "      <th>Outlet_Identifier</th>\n",
+       "      <th>Outlet_Establishment_Year</th>\n",
+       "      <th>Outlet_Size</th>\n",
+       "      <th>Outlet_Location_Type</th>\n",
+       "      <th>Outlet_Type</th>\n",
+       "      <th>Item_Outlet_Sales</th>\n",
+       "      <th>New_Item_Type</th>\n",
+       "      <th>Outlet_Years</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>FDA15</td>\n",
+       "      <td>9.30</td>\n",
+       "      <td>Low Fat</td>\n",
+       "      <td>0.016047</td>\n",
+       "      <td>Dairy</td>\n",
+       "      <td>249.8092</td>\n",
+       "      <td>OUT049</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Tier 1</td>\n",
+       "      <td>Supermarket Type1</td>\n",
+       "      <td>3735.1380</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DRC01</td>\n",
+       "      <td>5.92</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>0.019278</td>\n",
+       "      <td>Soft Drinks</td>\n",
+       "      <td>48.2692</td>\n",
+       "      <td>OUT018</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Tier 3</td>\n",
+       "      <td>Supermarket Type2</td>\n",
+       "      <td>443.4228</td>\n",
+       "      <td>Drinks</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FDN15</td>\n",
+       "      <td>17.50</td>\n",
+       "      <td>Low Fat</td>\n",
+       "      <td>0.016760</td>\n",
+       "      <td>Meat</td>\n",
+       "      <td>141.6180</td>\n",
+       "      <td>OUT049</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Tier 1</td>\n",
+       "      <td>Supermarket Type1</td>\n",
+       "      <td>2097.2700</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FDX07</td>\n",
+       "      <td>19.20</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>0.066132</td>\n",
+       "      <td>Fruits and Vegetables</td>\n",
+       "      <td>182.0950</td>\n",
+       "      <td>OUT010</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>Tier 3</td>\n",
+       "      <td>Grocery Store</td>\n",
+       "      <td>732.3800</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NCD19</td>\n",
+       "      <td>8.93</td>\n",
+       "      <td>Non-Edible</td>\n",
+       "      <td>0.066132</td>\n",
+       "      <td>Household</td>\n",
+       "      <td>53.8614</td>\n",
+       "      <td>OUT013</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Tier 3</td>\n",
+       "      <td>Supermarket Type1</td>\n",
+       "      <td>994.7052</td>\n",
+       "      <td>Non-Consumable</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Item_Identifier  Item_Weight Item_Fat_Content  Item_Visibility  \\\n",
+       "0           FDA15         9.30          Low Fat         0.016047   \n",
+       "1           DRC01         5.92          Regular         0.019278   \n",
+       "2           FDN15        17.50          Low Fat         0.016760   \n",
+       "3           FDX07        19.20          Regular         0.066132   \n",
+       "4           NCD19         8.93       Non-Edible         0.066132   \n",
+       "\n",
+       "               Item_Type  Item_MRP Outlet_Identifier  \\\n",
+       "0                  Dairy  249.8092            OUT049   \n",
+       "1            Soft Drinks   48.2692            OUT018   \n",
+       "2                   Meat  141.6180            OUT049   \n",
+       "3  Fruits and Vegetables  182.0950            OUT010   \n",
+       "4              Household   53.8614            OUT013   \n",
+       "\n",
+       "   Outlet_Establishment_Year Outlet_Size Outlet_Location_Type  \\\n",
+       "0                       1999      Medium               Tier 1   \n",
+       "1                       2009      Medium               Tier 3   \n",
+       "2                       1999      Medium               Tier 1   \n",
+       "3                       1998       Small               Tier 3   \n",
+       "4                       1987        High               Tier 3   \n",
+       "\n",
+       "         Outlet_Type  Item_Outlet_Sales   New_Item_Type  Outlet_Years  \n",
+       "0  Supermarket Type1          3735.1380            Food            14  \n",
+       "1  Supermarket Type2           443.4228          Drinks             4  \n",
+       "2  Supermarket Type1          2097.2700            Food            14  \n",
+       "3      Grocery Store           732.3800            Food            15  \n",
+       "4  Supermarket Type1           994.7052  Non-Consumable            26  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
