--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -432,6 +432,525 @@
     "# check unique values in dataset\n",
     "df.apply(lambda x: len(x.unique()))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9aeb2811",
+   "metadata": {},
+   "source": [
+    "## Preprocessing the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "13ec0c26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Item_Identifier                 0\n",
+       "Item_Weight                  1463\n",
+       "Item_Fat_Content                0\n",
+       "Item_Visibility                 0\n",
+       "Item_Type                       0\n",
+       "Item_MRP                        0\n",
+       "Outlet_Identifier               0\n",
+       "Outlet_Establishment_Year       0\n",
+       "Outlet_Size                     0\n",
+       "Outlet_Location_Type            0\n",
+       "Outlet_Type                     0\n",
+       "Item_Outlet_Sales               0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check for null values\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a0f5afc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Item_Identifier',\n",
+       " 'Item_Fat_Content',\n",
+       " 'Item_Type',\n",
+       " 'Outlet_Identifier',\n",
+       " 'Outlet_Size',\n",
+       " 'Outlet_Location_Type',\n",
+       " 'Outlet_Type']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# check for categorical attributes\n",
+    "cat_col = []\n",
+    "for x in df.dtypes.index:\n",
+    "    if df.dtypes[x] == 'object':\n",
+    "        cat_col.append(x)\n",
+    "cat_col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "587ae23f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Item_Fat_Content',\n",
+       " 'Item_Type',\n",
+       " 'Outlet_Size',\n",
+       " 'Outlet_Location_Type',\n",
+       " 'Outlet_Type']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cat_col.remove('Item_Identifier')\n",
+    "cat_col.remove('Outlet_Identifier')\n",
+    "cat_col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0ef5a2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item_Fat_Content\n",
+      "Item_Fat_Content\n",
+      "Low Fat    5089\n",
+      "Regular    2889\n",
+      "LF          316\n",
+      "reg         117\n",
+      "low fat     112\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Item_Type\n",
+      "Item_Type\n",
+      "Fruits and Vegetables    1232\n",
+      "Snack Foods              1200\n",
+      "Household                 910\n",
+      "Frozen Foods              856\n",
+      "Dairy                     682\n",
+      "Canned                    649\n",
+      "Baking Goods              648\n",
+      "Health and Hygiene        520\n",
+      "Soft Drinks               445\n",
+      "Meat                      425\n",
+      "Breads                    251\n",
+      "Hard Drinks               214\n",
+      "Others                    169\n",
+      "Starchy Foods             148\n",
+      "Breakfast                 110\n",
+      "Seafood                    64\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Outlet_Size\n",
+      "Outlet_Size\n",
+      "Medium    2793\n",
+      "Small     2388\n",
+      "High       932\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Outlet_Location_Type\n",
+      "Outlet_Location_Type\n",
+      "Tier 3    3350\n",
+      "Tier 2    2785\n",
+      "Tier 1    2388\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Outlet_Type\n",
+      "Outlet_Type\n",
+      "Supermarket Type1    5577\n",
+      "Grocery Store        1083\n",
+      "Supermarket Type3     935\n",
+      "Supermarket Type2     928\n",
+      "Name: count, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print the categorical columns\n",
+    "for col in cat_col:\n",
+    "    print(col)\n",
+    "    print(df[col].value_counts())\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e359ac1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Item_Weight</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item_Identifier</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>DRA12</th>\n",
+       "      <td>11.600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DRA24</th>\n",
+       "      <td>19.350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DRA59</th>\n",
+       "      <td>8.270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DRB01</th>\n",
+       "      <td>7.390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DRB13</th>\n",
+       "      <td>6.115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NCZ30</th>\n",
+       "      <td>6.590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NCZ41</th>\n",
+       "      <td>19.850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NCZ42</th>\n",
+       "      <td>10.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NCZ53</th>\n",
+       "      <td>9.600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NCZ54</th>\n",
+       "      <td>14.650</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1555 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Item_Weight\n",
+       "Item_Identifier             \n",
+       "DRA12                 11.600\n",
+       "DRA24                 19.350\n",
+       "DRA59                  8.270\n",
+       "DRB01                  7.390\n",
+       "DRB13                  6.115\n",
+       "...                      ...\n",
+       "NCZ30                  6.590\n",
+       "NCZ41                 19.850\n",
+       "NCZ42                 10.500\n",
+       "NCZ53                  9.600\n",
+       "NCZ54                 14.650\n",
+       "\n",
+       "[1555 rows x 1 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# fill the missing values\n",
+    "item_weight_mean = df.pivot_table(values = \"Item_Weight\", index = 'Item_Identifier')\n",
+    "item_weight_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae3d13db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       False\n",
+       "1       False\n",
+       "2       False\n",
+       "3       False\n",
+       "4       False\n",
+       "        ...  \n",
+       "8518    False\n",
+       "8519    False\n",
+       "8520    False\n",
+       "8521    False\n",
+       "8522    False\n",
+       "Name: Item_Weight, Length: 8523, dtype: bool"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "miss_bool = df['Item_Weight'].isnull()\n",
+    "miss_bool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54a8131f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, item in enumerate(df['Item_Identifier']):\n",
+    "    if miss_bool[i]:\n",
+    "        if item in item_weight_mean:\n",
+    "            df['Item_Weight'][i] = item_weight_mean.loc[item]['Item_Weight']\n",
+    "        else:\n",
+    "            df['Item_Weight'][i] = np.mean(df['Item_Weight'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "501de5cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df['Item_Weight'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fc6d8fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Outlet_Type</th>\n",
+       "      <th>Grocery Store</th>\n",
+       "      <th>Supermarket Type1</th>\n",
+       "      <th>Supermarket Type2</th>\n",
+       "      <th>Supermarket Type3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Outlet_Size</th>\n",
+       "      <td>Small</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Medium</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Outlet_Type Grocery Store Supermarket Type1 Supermarket Type2  \\\n",
+       "Outlet_Size         Small             Small            Medium   \n",
+       "\n",
+       "Outlet_Type Supermarket Type3  \n",
+       "Outlet_Size            Medium  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "outlet_size_mode = df.pivot_table(values='Outlet_Size', columns='Outlet_Type', aggfunc=(lambda x: x.mode()[0]))\n",
+    "outlet_size_mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bcfd3f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "miss_bool = df['Outlet_Size'].isnull()\n",
+    "df.loc[miss_bool, 'Outlet_Size'] = df.loc[miss_bool, 'Outlet_Type'].apply(lambda x: outlet_size_mode[x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0795d915",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df['Outlet_Size'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94b49d6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "526"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sum(df['Item_Visibility']==0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1101762f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# replace zeros with mean\n",
+    "df.loc[:, 'Item_Visibility'].replace([0], [df['Item_Visibility'].mean()], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "726eaf6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sum(df['Item_Visibility']==0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f480241d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Item_Fat_Content\n",
+       "Low Fat    5517\n",
+       "Regular    3006\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# combine item fat content\n",
+    "df['Item_Fat_Content'] = df['Item_Fat_Content'].replace({'LF':'Low Fat', 'reg':'Regular', 'low fat':'Low Fat'})\n",
+    "df['Item_Fat_Content'].value_counts()"
+   ]
   }
  ],
  "metadata": {
